templates/k8s-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: k8s-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    port: 80
    protocol: HTTP
    name: http
    allowedRoutes:
      namespaces:
        from: All

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute
  namespace: default
spec:
  parentRefs:
  - name: k8s-gateway
  rules:
  # user-service
  - matches:
    - path:
        type: PathPrefix
        value: /apis/v1/user
    # filters:
    #     - type: URLRewrite
    #       urlRewrite:
    #         path:
    #           type: ReplacePrefixMatch
    #           replacePrefixMatch: /apis/v1/user
    backendRefs:
    - name: user-service
      port: 8080

  # cart-service
  - matches:
    - path:
        type: PathPrefix
        value: /apis/v1/carts
    # filters:
    #     - type: URLRewrite
    #       urlRewrite:
    #         path:
    #           type: ReplacePrefixMatch
    #           replacePrefixMatch: /apis/v1/carts
    backendRefs:
    - name: cart-service
      port: 8080

  # order-service
  - matches:
    - path:
        type: PathPrefix
        value: /apis/v1/order
    # filters:
    #     - type: URLRewrite
    #       urlRewrite:
    #         path:
    #           type: ReplacePrefixMatch
    #           replacePrefixMatch: /apis/v1/order
    backendRefs:
    - name: order-service
      port: 8080

  # product-service
  - matches:
    - path:
        type: PathPrefix
        value: /apis/v1/product
    # filters:
    #     - type: URLRewrite
    #       urlRewrite:
    #         path:
    #           type: ReplacePrefixMatch
    #           replacePrefixMatch: /apis/v1/product
    backendRefs:
    - name: product-service
      port: 8080

  # product-service-category
  - matches:
    - path:
        type: PathPrefix
        value: /apis/v1/category
    # filters:
    #     - type: URLRewrite
    #       urlRewrite:
    #         path:
    #           type: ReplacePrefixMatch
    #           replacePrefixMatch: /apis/v1/category
    backendRefs:
    - name: product-service
      port: 8080

  # rating-service
  - matches:
    - path:
        type: PathPrefix
        value: /apis/v1/ratings
    # filters:
    #     - type: URLRewrite
    #       urlRewrite:
    #         path:
    #           type: ReplacePrefixMatch
    #           replacePrefixMatch: /apis/v1/ratings
    backendRefs:
    - name: rating-service
      port: 8080
